Добавил логгирование через NLog

--- a/Lesson_03/Persons/Properties/launchSettings.json
+++ b/Lesson_03/Persons/Properties/launchSettings.json
@@ -17,7 +17,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "TimeSheets": {
+    "Persons": {
       "commandName": "Project",
       "launchBrowser": true,
       "launchUrl": "",
