Создан скелет контроллера для работы с классом Person и DTO запросы для него

--- a/Lesson_03/Persons/Persons.csproj
+++ b/Lesson_03/Persons/Persons.csproj
@@ -16,7 +16,10 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\" />
+    <Folder Include="Data\" />
+    <Folder Include="Domain\Implementation\" />
+    <Folder Include="Domain\Interfaces\" />
+    <Folder Include="Infrastructure\" />
   </ItemGroup>
 
   <ItemGroup>
